@@ -83,16 +83,30 @@ public class SecurityConfig {
         return new TokenAuthenticationFilter();
     }
 
+//    @Bean
+//    CorsConfigurationSource corsConfigurationSource() {
+//        final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        CorsConfiguration config = new CorsConfiguration();
+//        source.registerCorsConfiguration("/**", config.applyPermitDefaultValues());
+//        config.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type", "*"));
+//        config.setAllowedOrigins(Collections.singletonList(allowedOrigin));
+//        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+//        config.setAllowCredentials(true);
+//        config.setExposedHeaders(List.of("Authorization"));
+//        return source;
+//    }
+
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-        source.registerCorsConfiguration("/**", config.applyPermitDefaultValues());
-        config.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type", "*"));
-        config.setAllowedOrigins(Collections.singletonList(allowedOrigin));
+        config.setAllowedOriginPatterns(List.of("*"));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         config.setAllowCredentials(true);
         config.setExposedHeaders(List.of("Authorization"));
+
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 
@@ -124,6 +138,11 @@ public class SecurityConfig {
         // api admin
         http.authorizeHttpRequests(request ->
                 request
+
+                       //  Mở quyền cho Chat & WebSocket & Upload (Public)
+                        .requestMatchers("/ws/**", "/ws/info/**", "/websocket/**").permitAll()
+                        .requestMatchers("/api/v1/chat/**").permitAll()
+                        .requestMatchers("/api/upload/**", "/uploads/**").permitAll()
 
 //                        .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/v1/order-online/**").permitAll()
 //                        .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/v1/admin/products/**").permitAll()
